Bug 218093.  Whitelist more mouse movement events to apply to disabled form controls.  r=smaug